removal: replace Integer constructors in raid boss keys